--- a/client.html
+++ b/client.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>aj demo simple</title>
-    <script src="js/sklib.js"></script>
-    <script src="js/app/application.js"></script>
+    <script src="js/inc.js"></script>
+    <script src="js/app/init.js"></script>
 </head>
 <body>
 
