--- a/client.html
+++ b/client.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript Application</title>
+
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/client.css">
-    <script src="js/inc.js"></script>
-    <script src="js/app/init.js"></script>
+
+    <script type="application/javascript" src="js/applibrary/inc.js"></script>
+    <script type="application/javascript" src="js/appinit.js"></script>
+
 </head>
 <body>
 
 <div id="page">
 	<div id="header">
-		<div class="logo">specPLACE</div>
-		<a href="#">JavaScript Application</a>
+		<div class="logo">namespace Application</div>
+		<a href="#">JavaScript library</a>
 	</div>
 
     <div id="container"></div>
